fix some styling issues with alignment and html view height

--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,6 @@
 .App {
   min-height: inherit;
   display: flex;
+  text-align: center;
   flex-direction: column;
 }
