--- a/src/components/studentHomeStyles.css
+++ b/src/components/studentHomeStyles.css
@@ -7,12 +7,6 @@
 .group-arrangement-pg-container {
 }
 
-.page-heading-container {
-  margin: 24px auto;
-  text-align: center;
-  
-}
-
 /* Page heading */
 .page-heading-container > .page-heading {
   display: inline;
